# local-table-OCR

./: .env.example  .gitignore  Makefile  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  engine.py  exporter.py  main.py
src/tests/: config_test.py  conftest.py  engine_test.py  exporter_test.py  main_test.py
