[project]
name = "table-ocr"
version = "0.1.0"
description = "A modular, CPU-optimized OCR application for table extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paddleocr>=2.7.3",
    "opencv-python>=4.8.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.13.4",
    "paddlex[ocr]>=3.6.1",
    "paddlepaddle>=3.3.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "ruff>=0.15.15",
]

[tool.ruff]
# Match your active Python 3.12 runtime environment
target-version = "py312"
line-length = 100


[tool.ruff.lint]
# Select rule families to actively enforce:
# E/W = pycodestyle (style violations and spacing)
# F   = Pyflakes (critical logic bugs, undefined variables)
# I   = isort (automatically sorts your imports alphabetically)
# UP  = pyupgrade (modernizes python syntax like type hints automatically)
# B   = flake8-bugbear (common programming traps and code design smells)
select = ["E", "W", "F", "I", "UP", "B"]

# Explicitly tell Ruff which rules it is allowed to rewrite on disk automatically
fixable = ["ALL"]

# Ignore rules that directly conflict with the automatic ruff formatter rules
ignore = ["E203"]

[tool.ruff.lint.isort]
# Combines your internal local project files neatly separate from external third-party imports
known-first-party = ["src"]