[project]
name = "table-ocr"
version = "0.1.0"
description = "A modular, CPU-optimized OCR application for table extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paddleocr>=2.7.3",
    "opencv-python>=4.8.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.13.4",
    "paddlex[ocr]>=3.6.1",
    "paddlepaddle>=3.3.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "coverage>=7.14.1",
    "deptry>=0.25.1",
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]

[tool.ruff]
# Match your active Python 3.12 runtime environment
target-version = "py312"
line-length = 100


[tool.ruff.lint]
# Select rule families to actively enforce:
# E/W = pycodestyle (style violations and spacing)
# F   = Pyflakes (critical logic bugs, undefined variables)
# I   = isort (automatically sorts your imports alphabetically)
# UP  = pyupgrade (modernizes python syntax like type hints automatically)
# B   = flake8-bugbear (common programming traps and code design smells)
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",

    # Additional high-value checks
    "SIM",   # simplify
    "C4",    # comprehensions
    "RUF",   # Ruff-specific
]

# Explicitly tell Ruff which rules it is allowed to rewrite on disk automatically
fixable = ["ALL"]

# Ignore rules that directly conflict with the automatic ruff formatter rules
ignore = ["E203"]

[tool.ruff.lint.isort]
# Combines your internal local project files neatly separate from external third-party imports
known-first-party = ["src"]

[tool.pyright]
typeCheckingMode = "basic"
reportAttributeAccessIssue = false

[tool.bandit]
exclude_dirs = ["tests"]
severity = "medium"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
addopts = """
--cov=src
--cov-report=term-missing
--cov-report=html:.dist/coverage
--cov-report=xml:.dist/coverage.xml
--cov-fail-under=100
"""

[tool.coverage.run]
branch = true
source = ["src"]
data_file = ".dist/.coverage"

[tool.coverage.report]
show_missing = true
