[project]
name = "table-ocr"
version = "0.1.0"
description = "A modular, CPU-optimized OCR application for table extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paddleocr>=2.7.3",
    "opencv-python>=4.8.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.13.4",
    "paddlex[ocr]>=3.6.1",
    "paddlepaddle>=3.3.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "coverage>=7.14.1",
    "deptry>=0.25.1",
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]

[tool.ruff]
# Match your active Python 3.12 runtime environment
target-version = "py312"
line-length = 100


[tool.ruff.lint]
select = ["ANN", "E", "W", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = [
    "E203",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN205",
    "ANN206",
]


# Explicitly tell Ruff which rules it is allowed to rewrite on disk automatically
fixable = ["ALL"]


[tool.ruff.lint.isort]
# Combines your internal local project files neatly separate from external third-party imports
known-first-party = ["src"]

[tool.pyright]
typeCheckingMode = "strict"
reportAttributeAccessIssue = false
reportMissingTypeStubs = false
reportUnknownArgumentType = true
reportUnknownParameterType = true
reportUnknownReturnType = true
reportUnknownMemberType = false
reportUnknownVariableType = false
[tool.bandit]
exclude_dirs = ["tests"]
severity = "medium"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
addopts = """
--cov=src
--cov-report=term-missing
--cov-report=html:.dist/coverage
--cov-report=xml:.dist/coverage.xml
--cov-fail-under=100
"""

[tool.coverage.run]
branch = true
source = ["src"]
data_file = ".dist/.coverage"
omit = [
    "*/test_*.py",
    "*/tests/*",
]

[tool.coverage.report]
show_missing = true
